@@ -151,10 +151,6 @@ debugger_expression_new_number( libspectrum_dword number, int pool )
   debugger_expression *exp;
 
   exp = mempool_new( pool, debugger_expression, 1 );
-  if( !exp ) {
-    ui_error( UI_ERROR_ERROR, "out of memory at %s:%d", __FILE__, __LINE__ );
-    return NULL;
-  }
 
   exp->type = DEBUGGER_EXPRESSION_TYPE_INTEGER;
   exp->precedence = PRECEDENCE_ATOMIC;
@@ -169,10 +165,6 @@ debugger_expression_new_register( int which, int pool )
   debugger_expression *exp;
 
   exp = mempool_new( pool, debugger_expression, 1 );
-  if( !exp ) {
-    ui_error( UI_ERROR_ERROR, "out of memory at %s:%d", __FILE__, __LINE__ );
-    return NULL;
-  }
 
   exp->type = DEBUGGER_EXPRESSION_TYPE_REGISTER;
   exp->precedence = PRECEDENCE_ATOMIC;
@@ -188,10 +180,6 @@ debugger_expression_new_binaryop( int operation, debugger_expression *operand1,
   debugger_expression *exp;
 
   exp = mempool_new( pool, debugger_expression, 1 );
-  if( !exp ) {
-    ui_error( UI_ERROR_ERROR, "out of memory at %s:%d", __FILE__, __LINE__ );
-    return NULL;
-  }
 
   exp->type = DEBUGGER_EXPRESSION_TYPE_BINARYOP;
   exp->precedence = binaryop_precedence( operation );
@@ -211,10 +199,6 @@ debugger_expression_new_unaryop( int operation, debugger_expression *operand,
   debugger_expression *exp;
 
   exp = mempool_new( pool, debugger_expression, 1 );
-  if( !exp ) {
-    ui_error( UI_ERROR_ERROR, "out of memory at %s:%d", __FILE__, __LINE__ );
-    return NULL;
-  }
 
   exp->type = DEBUGGER_EXPRESSION_TYPE_UNARYOP;
   exp->precedence = unaryop_precedence( operation );
@@ -231,19 +215,10 @@ debugger_expression_new_variable( const char *name, int pool )
   debugger_expression *exp;
 
   exp = mempool_new( pool, debugger_expression, 1 );
-  if( !exp ) {
-    ui_error( UI_ERROR_ERROR, "out of memory at %s:%d", __FILE__, __LINE__ );
-    return NULL;
-  }
 
   exp->type = DEBUGGER_EXPRESSION_TYPE_VARIABLE;
   exp->precedence = PRECEDENCE_ATOMIC;
-
   exp->types.variable = mempool_strdup( pool, name );
-  if( !exp->types.variable ) {
-    ui_error( UI_ERROR_ERROR, "out of memory at %s:%d", __FILE__, __LINE__ );
-    return NULL;
-  }
 
   return exp;
 }
@@ -477,10 +452,6 @@ deparse_unaryop( char *buffer, size_t length,
   int error;
 
   operand_buffer = libspectrum_new( char, length );
-  if( !operand_buffer ) {
-    ui_error( UI_ERROR_ERROR, "out of memory at %s:%d", __FILE__, __LINE__ );
-    return 1;
-  }
 
   error = debugger_expression_deparse( operand_buffer, length, unaryop->op );
   if( error ) { free( operand_buffer ); return error; }
@@ -518,10 +489,6 @@ deparse_binaryop( char *buffer, size_t length,
   int error;
 
   operand1_buffer = libspectrum_new( char, 2 * length );
-  if( !operand1_buffer ) {
-    ui_error( UI_ERROR_ERROR, "out of memory at %s:%d", __FILE__, __LINE__ );
-    return 1;
-  }
   operand2_buffer = &operand1_buffer[ length ];
 
   error = debugger_expression_deparse( operand1_buffer, length,
