@@ -571,10 +571,6 @@ zxatasp_to_snapshot( libspectrum_snap *snap )
   for( i = 0; i < ZXATASP_PAGES; i++ ) {
 
     buffer = libspectrum_new( libspectrum_byte, ZXATASP_PAGE_LENGTH );
-    if( !buffer ) {
-      ui_error( UI_ERROR_ERROR, "Out of memory at %s:%d", __FILE__, __LINE__ );
-      return;
-    }
 
     memcpy( buffer, ZXATASPMEM[ i ], ZXATASP_PAGE_LENGTH );
     libspectrum_snap_set_zxatasp_ram( snap, i, buffer );
