@@ -491,10 +491,6 @@ if1_to_snapshot( libspectrum_snap *snap )
     libspectrum_snap_set_interface1_rom_length( snap, 0, rom_length );
 
     buffer = libspectrum_new( libspectrum_byte, rom_length );
-    if( !buffer ) {
-      ui_error( UI_ERROR_ERROR, "Out of memory at %s:%d", __FILE__, __LINE__ );
-      return;
-    }
 
     memcpy( buffer, if1_memory_map_romcs[0].page, MEMORY_PAGE_SIZE );
 
